--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -100,3 +100,7 @@
 .swiper-button-prev::after {
   content: '' !important;
 }
+
+footer {
+  background-image: linear-gradient(to right, #ccc, #333, #ccc);
+}
