--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,6 @@
-<footer class="bg-green-800 py-4">
-  <div class="container mx-auto text-center text-green-400">
+<hr>
+<footer class="bg-gray-800 py-4">
+  <div class="container mx-auto text-center text-white-400">
     <p>© <%= Time.now.year %> Compilandocode - Todos los derechos reservados.</p>
     
     <div class="flex justify-center space-x-4 mt-4">
